updated in_df to include zfire output

--- a/git_data/in_df.ipynb
+++ b/git_data/in_df.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/jess/Desktop/data/fits\n"
+      "/Users/jess/Desktop/og_data/fits\n"
      ]
     }
    ],
    "source": [
-    "cd /Users/jess/Desktop/data/fits"
+    "cd /Users/jess/Desktop/og_data/fits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,14 @@
     "cdfs_fits, cos_fits, uds_fits = cdfs_fit[1].data, cos_fit[1].data, uds_fit[1].data\n",
     "cdfs_fits, cos_fits, uds_fits = pd.DataFrame(cdfs_fits), pd.DataFrame(cos_fits), pd.DataFrame(uds_fits)\n",
     "\n",
-    "cdfs_fits.to_csv('/Users/jess/Desktop/data/fits/cdfs_fits.csv', index = False)\n",
-    "cos_fits.to_csv('/Users/jess/Desktop/data/fits/cosmos_fits.csv', index = False)\n",
-    "uds_fits.to_csv('/Users/jess/Desktop/data/fits/uds_fits.csv', index = False)"
+    "cdfs_fits.to_csv('/Users/jess/Desktop/og_data/fits/cdfs_fits.csv', index = False)\n",
+    "cos_fits.to_csv('/Users/jess/Desktop/og_data/fits/cosmos_fits.csv', index = False)\n",
+    "uds_fits.to_csv('/Users/jess/Desktop/og_data/fits/uds_fits.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,42 +59,42 @@
     "\n",
     "# Primary ZFOURGE Catalogue Paths (Optical, NIR and MIR Data, Quality Flags, etc)\n",
     "\n",
-    "cdfs_main_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.11.cat')\n",
-    "cos_main_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.8.cat')\n",
-    "uds_main_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.10.cat')\n",
+    "cdfs_main_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.11.cat')\n",
+    "cos_main_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.8.cat')\n",
+    "uds_main_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.10.cat')\n",
     "\n",
     "# Rest-Frame Catalogue Paths (Rest Frame UV, Optical and NIR Flux)\n",
     "\n",
-    "cdfs_rest_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.rest.v0.9.cat')\n",
-    "cos_rest_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.rest.v0.9.cat')\n",
-    "uds_rest_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.rest.v0.9.cat')\n",
+    "cdfs_rest_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.rest.v0.9.cat')\n",
+    "cos_rest_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.rest.v0.9.cat')\n",
+    "uds_rest_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.rest.v0.9.cat')\n",
     "\n",
     "# SFR Catalogue Paths (MIPS 24um M/FIR Data and UV + IR SFRs)\n",
     "\n",
-    "cos_sfr_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.sfr.v0.4.cat')\n",
-    "uds_sfr_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.sfr.v0.4.cat')\n",
+    "cos_sfr_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.sfr.v0.4.cat')\n",
+    "uds_sfr_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.sfr.v0.4.cat')\n",
     "\n",
     "# Herschel Catalogue Paths (Same as SFR Catalogue but with PACS FIR Data)\n",
     "\n",
-    "cdfs_herschel_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.herschel.v0.4.cat')\n",
+    "cdfs_herschel_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.herschel.v0.4.cat')\n",
     "\n",
     "# 3DHST Catalogue (NIR spectroscopic survey)\n",
     "\n",
-    "cdfs_3dhst_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.3dhst.v0.4.cat')\n",
-    "cos_3dhst_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.3dhst.v0.4.cat')\n",
-    "uds_3dhst_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.3dhst.v0.4.cat')\n",
+    "cdfs_3dhst_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.3dhst.v0.4.cat')\n",
+    "cos_3dhst_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.3dhst.v0.4.cat')\n",
+    "uds_3dhst_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.3dhst.v0.4.cat')\n",
     "\n",
     "# Radio Catalogue Paths\n",
     "\n",
-    "cdfs_radio_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.radio.v0.3.cat')\n",
-    "cos_radio_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.radio.v0.3.cat')\n",
-    "uds_radio_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.radio.v0.3.cat')\n",
+    "cdfs_radio_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.radio.v0.3.cat')\n",
+    "cos_radio_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.radio.v0.3.cat')\n",
+    "uds_radio_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.radio.v0.3.cat')\n",
     "\n",
     "# X-Ray Catalogue Paths\n",
     "\n",
-    "cdfs_xray_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.xray.v0.4.cat')\n",
-    "cos_xray_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.xray.v0.4.cat')\n",
-    "uds_xray_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.xray.v0.4.cat')\n",
+    "cdfs_xray_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.xray.v0.4.cat')\n",
+    "cos_xray_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.xray.v0.4.cat')\n",
+    "uds_xray_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.xray.v0.4.cat')\n",
     "\n",
     "\n",
     "\n",
@@ -102,44 +102,50 @@
     "\n",
     "# Primary ZFOURGE Redshift Catalogue Paths (Redshifts, sigma intervals, etc)\n",
     "\n",
-    "cdfs_zout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.zout')\n",
-    "cos_zout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.zout')\n",
-    "uds_zout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.zout')\n",
+    "cdfs_zout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.zout')\n",
+    "cos_zout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.zout')\n",
+    "uds_zout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.zout')\n",
     "\n",
     "# FAST Stellar Population Catalogue Paths (Stellar Masses, SFRs, metallicity, dust reddening, etc)\n",
     "\n",
-    "cdfs_fout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.fout')\n",
-    "cos_fout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.fout')\n",
-    "uds_fout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.fout')\n",
+    "cdfs_fout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.fout')\n",
+    "cos_fout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.fout')\n",
+    "uds_fout_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.fout')\n",
     "\n",
     "# Spectroscopic Redshift Catalogue Paths\n",
     "\n",
-    "cdfs_zspec_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.zspec.v0.4.cat')\n",
-    "cos_zspec_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.zspec.v0.4.cat')\n",
-    "uds_zspec_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.zspec.v0.4.cat')\n",
+    "cdfs_zspec_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.zspec.v0.4.cat')\n",
+    "cos_zspec_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.zspec.v0.4.cat')\n",
+    "uds_zspec_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.zspec.v0.4.cat')\n",
     "\n",
     "# Van der Wel et al. (2012) GALFIT Catalogue Paths (ZFOURGE matches, separation, structural parameters, etc)\n",
     "\n",
-    "cdfs_vdw_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.vdw.v0.4.cat')\n",
-    "cos_vdw_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.vdw.v0.4.cat')\n",
-    "uds_vdw_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.vdw.v0.4.cat')\n",
+    "cdfs_vdw_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.vdw.v0.4.cat')\n",
+    "cos_vdw_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.vdw.v0.4.cat')\n",
+    "uds_vdw_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.vdw.v0.4.cat')\n",
     "\n",
     "# AGN Catalogue Paths (Binary AGN Candidate Flags for X-Ray, IR and Radio Diagnostics)\n",
     "\n",
-    "cdfs_agn_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cdfs', 'cdfs.v1.6.9.agn.v0.5.cat')\n",
-    "cos_agn_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'cosmos', 'cosmos.v1.3.6.agn.v0.5.cat')\n",
-    "uds_agn_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'raw', 'uds', 'uds.v1.5.8.agn.v0.5.cat')\n",
+    "cdfs_agn_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cdfs', 'cdfs.v1.6.9.agn.v0.5.cat')\n",
+    "cos_agn_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'cosmos', 'cosmos.v1.3.6.agn.v0.5.cat')\n",
+    "uds_agn_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'raw', 'uds', 'uds.v1.5.8.agn.v0.5.cat')\n",
     "\n",
     "# FITS Files\n",
     "\n",
-    "cdfs_fits_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'fits', 'cdfs_fits.csv')\n",
-    "cos_fits_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'fits', 'cosmos_fits.csv')\n",
-    "uds_fits_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'data', 'fits', 'uds_fits.csv')"
+    "cdfs_fits_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'fits', 'cdfs_fits.csv')\n",
+    "cos_fits_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'fits', 'cosmos_fits.csv')\n",
+    "uds_fits_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'og_data', 'fits', 'uds_fits.csv')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ZFIRE DATA W/ ZFOURGE IDs\n",
+    "\n",
+    "cos_zfire_path = os.path.join('/', 'Users', 'jess', 'Desktop', 'git_mphil', 'git_data', 'cos_zfire.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,18 +175,21 @@
     "\n",
     "cdfs_fits, cos_fits, uds_fits = [pd.read_csv(path, sep = ',') for path in [cdfs_fits_path, cos_fits_path, uds_fits_path]]\n",
     "\n",
-    "cdfs_main, cos_main, uds_main = [pd.read_csv(path, sep = '\\s+') for path in [cdfs_main_path, cos_main_path, uds_main_path]]"
+    "cdfs_main, cos_main, uds_main = [pd.read_csv(path, sep = '\\s+') for path in [cdfs_main_path, cos_main_path, uds_main_path]]\n",
+    "\n",
+    "cos_zfire = [pd.read_csv(path, sep = ',') for path in [cos_zfire_path]]\n",
+    "cos_zfire = cos_zfire[0].replace('', -99)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- Generate Custom Dataframe ----------\n",
     "\n",
-    "def custom_dataframe(cat, zout, agn, xray, fout, main, vdw, sfr):\n",
+    "def custom_dataframe(cat, zout, agn, xray, fout, main, vdw, sfr, zfire = None):\n",
     "\n",
     "    cols = {\n",
     "\n",
@@ -228,16 +237,27 @@
     "        'f_24': sfr['f24'] * 1000, 'e_24': sfr['e24'] * 1000, 'SNR_24': (sfr['f24'] * 1000) / (sfr['e24'] * 1000)\n",
     "    }\n",
     "\n",
+    "        # ----- ZFIRE Data (COSMOS Only) -----\n",
+    "\n",
+    "    if zfire is not None:\n",
+    "        cols.update({\n",
+    "            'f_Ha': zfire['FHa'], 'e_Ha': zfire['e_FHa'],\n",
+    "            'f_Hb': zfire['FHb'], 'e_Hb': zfire['e_FHb'],\n",
+    "            'f_NII': zfire['FNII'], 'e_NII': zfire['e_FNII'],\n",
+    "            'f_OII': zfire['FOII'], 'e_OII': zfire['e_FOII'],\n",
+    "            'f_OIII': zfire['FOIII'], 'e_OIII': zfire['e_FOIII'],\n",
+    "    })\n",
+    "\n",
     "    return pd.DataFrame(cols)\n",
     "\n",
     "cdfs = custom_dataframe(cdfs_cat, cdfs_zout, cdfs_agn, cdfs_xray, cdfs_fout, cdfs_main, cdfs_vdw, cdfs_sfr)\n",
-    "cos = custom_dataframe(cos_cat, cos_zout, cos_agn, cos_xray, cos_fout, cos_main, cos_vdw, cos_sfr)\n",
+    "cos = custom_dataframe(cos_cat, cos_zout, cos_agn, cos_xray, cos_fout, cos_main, cos_vdw, cos_sfr, cos_zfire)\n",
     "uds = custom_dataframe(uds_cat, uds_zout, uds_agn, uds_xray, uds_fout, uds_main, uds_vdw, uds_sfr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,19 +489,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- Save Dataframes ----------\n",
     "\n",
-    "cdfs.to_csv('/Users/jess/Desktop/data/raw/cdfs/cdfs_in_df.csv', index = False)\n",
-    "cos.to_csv('/Users/jess/Desktop/data/raw/cosmos/cos_in_df.csv', index = False)\n",
-    "uds.to_csv('/Users/jess/Desktop/data/raw/uds/uds_in_df.csv', index = False)\n",
+    "cdfs.to_csv('/Users/jess/Desktop/og_data/raw/cdfs/cdfs_in_df.csv', index = False)\n",
+    "cos.to_csv('/Users/jess/Desktop/og_data/raw/cosmos/cos_in_df.csv', index = False)\n",
+    "uds.to_csv('/Users/jess/Desktop/og_data/raw/uds/uds_in_df.csv', index = False)\n",
     "\n",
-    "cdfs.to_csv('/Users/jess/Desktop/git_python/git_data/cdfs.csv', index = False)\n",
-    "cos.to_csv('/Users/jess/Desktop/git_python/git_data/cos.csv', index = False)\n",
-    "uds.to_csv('/Users/jess/Desktop/git_python/git_data/uds.csv', index = False)"
+    "cdfs.to_csv('/Users/jess/Desktop/git_mphil/git_data/cdfs.csv', index = False)\n",
+    "cos.to_csv('/Users/jess/Desktop/git_mphil/git_data/cos.csv', index = False)\n",
+    "uds.to_csv('/Users/jess/Desktop/git_mphil/git_data/uds.csv', index = False)"
    ]
   },
   {
