updated in_df.py output with BPT columns

--- a/git_data/in_df.ipynb
+++ b/git_data/in_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,13 +177,12 @@
     "\n",
     "cdfs_main, cos_main, uds_main = [pd.read_csv(path, sep = '\\s+') for path in [cdfs_main_path, cos_main_path, uds_main_path]]\n",
     "\n",
-    "cos_zfire = [pd.read_csv(path, sep = ',') for path in [cos_zfire_path]]\n",
-    "cos_zfire = cos_zfire[0].replace('', -99)"
+    "cos_zfire = pd.read_csv(cos_zfire_path, sep = ',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,9 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/arraylike.py:399: RuntimeWarning: divide by zero encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/arraylike.py:399: RuntimeWarning: divide by zero encountered in log10\n",
+      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------- Diagnostic Ratio/Index Columns ----------\n",
     "\n",
@@ -373,6 +383,17 @@
     "    data['36_45_in'] = data['AB_36'] - data['AB_45']\n",
     "    data['58_80_in'] = data['AB_58'] - data['AB_80']\n",
     "\n",
+    "# ----- Lacy Error Propagation -----\n",
+    "    \n",
+    "for data in [cdfs, cos, uds]:\n",
+    "\n",
+    "    data['e_80_45'] = np.sqrt((data['e_80'] / data['f_80'])**2 + (data['e_45'] / data['f_45'])**2)\n",
+    "    data['e_58_36'] = np.sqrt((data['e_58'] / data['f_58'])**2 + (data['e_36'] / data['f_36'])**2)\n",
+    "    data['e_80_36'] = np.sqrt((data['e_80'] / data['f_80'])**2 + (data['e_36'] / data['f_36'])**2)\n",
+    "    data['e_58_36_80_45'] = np.sqrt((data['e_58_36'] / data['58_36'])**2 + (data['e_80_45'] / data['80_45'])**2)\n",
+    "\n",
+    "    \n",
+    "\n",
     "\n",
     "\n",
     "# ----- KI/M Diagnostics -----\n",
@@ -384,12 +405,19 @@
     "\n",
     "    data['80_24_in'] = data['AB_80'] - data['AB_24']\n",
     "\n",
-    "    data['24_58'] = np.log10(data['f_24'] / data['f_58'])"
+    "    data['24_58'] = np.log10(data['f_24'] / data['f_58'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ----- BPT -----\n",
+    "    \n",
+    "cos['NII_Ha'] = np.log10(cos['f_NII']) / np.log10(cos['f_Ha'])\n",
+    "cos['OIII_Hb'] = np.log10(cos['f_OIII']) / np.log10(cos['f_Hb'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,12 +512,18 @@
     "\n",
     "    # -- KIM --\n",
     "\n",
-    "    data['KIM'] = np.where((data['80_24_in'] > 0.5) & (data['80_24_in'] > (-2.9 * data['45_80_in'] + 2.8)), 1, 0)"
+    "    data['KIM'] = np.where((data['80_24_in'] > 0.5) & (data['80_24_in'] > (-2.9 * data['45_80_in'] + 2.8)), 1, 0)\n",
+    "\n",
+    "    # -- BPT --\n",
+    "\n",
+    "    x2 = np.linspace(-2, 0.3, 20786)\n",
+    "\n",
+    "    cos['BPT'] = np.where((cos['OIII_Hb'] > (0.61 / (x2 - 0.47) + 1.19)), 1, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
