--- a/git_data/in_df.ipynb
+++ b/git_data/in_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -447,12 +447,17 @@
     "\n",
     "    data['true_agn'] = np.where(data['ir_agn_contribution'] >= 0.5, 1, 0)\n",
     "\n",
-    "    data['log_agn_luminosity'] = np.log10(fit['best.agn.luminosity'])\n"
+    "    data['log_agn_luminosity'] = np.log10(fit['best.agn.luminosity'])\n",
+    "\n",
+    "    data['log_agn_luminosity'] = data['log_agn_luminosity'].replace(-np.inf, np.nan)\n",
+    "    \n",
+    "    data['log_agn_luminosity'] = np.where((data['log_agn_luminosity'] < 33), np.nan, data['log_agn_luminosity'])\n",
+    "    data['log_agn_luminosity'] = np.where((data['log_agn_luminosity'] > 39), np.nan, data['log_agn_luminosity'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,40 +495,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------- Diagnostic Boolean Flags ----------\n",
+    "# ---------- Diagnostic AGN/SFG Boolean Flags ----------\n",
     "\n",
     "for data in [cdfs, cos, uds]:\n",
     "\n",
-    "    # -- Lacy Wedge --\n",
+    "    # -- AGN --\n",
     "\n",
     "    data['Lacy'] = np.where((data['58_36'] > -0.1) & (data['80_45'] > -0.2) & (data['80_45'] < 0.8 * data['58_36'] + 0.5), 1, 0)\n",
-    "\n",
-    "    # -- Donley Wedge --\n",
-    "\n",
     "    data['Donley'] = np.where((data['58_36'] > 0.08) & (data['80_45'] > 0.15) & (data['80_45'] > ((1.21 * data['58_36']) - 0.27)) & (data['80_45'] < ((1.21 * data['58_36']) + 0.27)) & (data['f_45'] > data['f_36']) & (data['f_58'] > data['f_45']) & (data['f_80'] > data['f_58']), 1, 0)\n",
-    "\n",
-    "    # -- KI --\n",
-    "\n",
     "    data['KI'] = np.where((data['45_80_in'] > 0) & (data['Ks_45_in'] > 0), 1, 0)\n",
-    "\n",
-    "    # -- KIM --\n",
-    "\n",
     "    data['KIM'] = np.where((data['80_24_in'] > 0.5) & (data['80_24_in'] > (-2.9 * data['45_80_in'] + 2.8)), 1, 0)\n",
     "\n",
-    "    # -- BPT --\n",
+    "    # -- SFG --\n",
     "\n",
-    "    x2 = np.linspace(-2, 0.3, 20786)\n",
-    "\n",
-    "    cos['BPT'] = np.where((cos['OIII_Hb'] > (0.61 / (x2 - 0.47) + 1.19)), 1, 0)"
+    "    data['Lacy_SFG'] = np.where((data['Lacy'] == 0), 1, 0)\n",
+    "    data['KI_SFG'] = np.where((data['KI'] == 0), 1, 0)\n",
+    "    data['KIM_SFG'] = np.where((data['KIM'] == 0), 1, 0)\n",
+    "    data['radio_SFG'] = np.where((data['radio_agn'] == 0), 1, 0)\n",
+    "    data['xray_SFG'] = np.where((data['xray_agn'] == 0), 1, 0)\n",
+    "    data['ir_SFG'] = np.where((data['ir_agn'] == 0), 1, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
