--- a/git_data/in_df.ipynb
+++ b/git_data/in_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,13 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- Generate Custom Dataframe ----------\n",
     "\n",
-    "def custom_dataframe(cat, zout, agn, xray, fout, main, vdw, sfr, zfire = None):\n",
+    "def custom_dataframe(cat, zout, agn, xray, fout, main, vdw, sfr, rest, zfire = None):\n",
     "\n",
     "    cols = {\n",
     "\n",
@@ -233,7 +233,13 @@
     "        'f_45': cat['f_IRAC_45'], 'e_45': cat['e_IRAC_45'], 'w_45': cat['w_IRAC_45'], 'SNR_45': cat['f_IRAC_45'] / cat['e_IRAC_45'],\n",
     "        'f_58': cat['f_IRAC_58'], 'e_58': cat['e_IRAC_58'], 'w_58': cat['w_IRAC_58'], 'SNR_58': cat['f_IRAC_58'] / cat['e_IRAC_58'],\n",
     "        'f_80': cat['f_IRAC_80'], 'e_80': cat['e_IRAC_80'], 'w_80': cat['w_IRAC_80'], 'SNR_80': cat['f_IRAC_80'] / cat['e_IRAC_80'],\n",
-    "        'f_24': sfr['f24'] * 1000, 'e_24': sfr['e24'] * 1000, 'SNR_24': (sfr['f24'] * 1000) / (sfr['e24'] * 1000)\n",
+    "        'f_24': sfr['f24'] * 1000, 'e_24': sfr['e24'] * 1000, 'SNR_24': (sfr['f24'] * 1000) / (sfr['e24'] * 1000),\n",
+    "\n",
+    "        # ----- UVJ Filters -----\n",
+    "\n",
+    "        'f_U': rest['f_U_rf'], 'e_U': rest['e_U_rf'], 'SNR_U': rest['f_U_rf'] / rest['e_U_rf'],\n",
+    "        'f_V': rest['f_V_rf'], 'e_V': rest['e_V_rf'], 'SNR_V': rest['f_V_rf'] / rest['e_V_rf'],\n",
+    "        'f_J': rest['f_J_rf'], 'e_J': rest['e_J_rf'], 'SNR_J': rest['f_J_rf'] / rest['e_J_rf'],\n",
     "    }\n",
     "\n",
     "        # ----- ZFIRE Data (COSMOS Only) -----\n",
@@ -249,14 +255,14 @@
     "\n",
     "    return pd.DataFrame(cols)\n",
     "\n",
-    "cdfs = custom_dataframe(cdfs_cat, cdfs_zout, cdfs_agn, cdfs_xray, cdfs_fout, cdfs_main, cdfs_vdw, cdfs_sfr)\n",
-    "cos = custom_dataframe(cos_cat, cos_zout, cos_agn, cos_xray, cos_fout, cos_main, cos_vdw, cos_sfr, cos_zfire)\n",
-    "uds = custom_dataframe(uds_cat, uds_zout, uds_agn, uds_xray, uds_fout, uds_main, uds_vdw, uds_sfr)"
+    "cdfs = custom_dataframe(cdfs_cat, cdfs_zout, cdfs_agn, cdfs_xray, cdfs_fout, cdfs_main, cdfs_vdw, cdfs_sfr, cdfs_rest)\n",
+    "cos = custom_dataframe(cos_cat, cos_zout, cos_agn, cos_xray, cos_fout, cos_main, cos_vdw, cos_sfr, cos_rest, cos_zfire)\n",
+    "uds = custom_dataframe(uds_cat, uds_zout, uds_agn, uds_xray, uds_fout, uds_main, uds_vdw, uds_sfr, uds_rest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,13 +284,25 @@
     "\n",
     "        if conv['filter'] == '24':\n",
     "            cat[f'AB_{conv[\"filter\"]}'] = - (5 / 2) * np.log10(cat[conv['data']]) + 16.4\n",
+    "\n",
     "        else:\n",
-    "            cat[f'AB_{conv[\"filter\"]}'] = - (5 / 2) * np.log10(cat[conv['data']]) + 16.4 #23.9\n"
+    "            cat[f'AB_{conv[\"filter\"]}'] = - (5 / 2) * np.log10(cat[conv['data']]) + 16.4 #23.9\n",
+    "\n",
+    "uvj_conversions = [\n",
+    "    {'filter': 'U', 'catalog': [cdfs, cos, uds], 'data': 'f_U'},\n",
+    "    {'filter': 'V', 'catalog': [cdfs, cos, uds], 'data': 'f_V'},\n",
+    "    {'filter': 'J', 'catalog': [cdfs, cos, uds], 'data': 'f_J'}\n",
+    "]\n",
+    "\n",
+    "for conv_uvj in uvj_conversions:\n",
+    "\n",
+    "    for cat in conv_uvj['catalog']:\n",
+    "        cat[f'AB_{conv_uvj[\"filter\"]}'] = - (5 / 2) * np.log10(cat[conv_uvj['data']]) + 23.9\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -412,12 +430,21 @@
     "# ----- BPT -----\n",
     "    \n",
     "cos['NII_Ha'] = np.log10(cos['f_NII']) / np.log10(cos['f_Ha'])\n",
-    "cos['OIII_Hb'] = np.log10(cos['f_OIII']) / np.log10(cos['f_Hb'])"
+    "cos['OIII_Hb'] = np.log10(cos['f_OIII']) / np.log10(cos['f_Hb'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ----- UVJ -----\n",
+    "\n",
+    "for data in [cdfs, cos, uds]:\n",
+    "\n",
+    "    data['U_V'] = data['AB_U'] - data['AB_V']\n",
+    "    data['V_J'] = data['AB_V'] - data['AB_J']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,22 +507,22 @@
     "\n",
     "# We also restrict sources to those with SNR >= 5 across \n",
     "\n",
-    "cdfs = cdfs[(cdfs['use'] == 1) & (cdfs['SNR_36'] >= 5) & (cdfs['SNR_45'] >= 5) & (cdfs['SNR_58'] >= 5) & (cdfs['SNR_80'] >= 5)]\n",
-    "cos = cos[(cos['use'] == 1) & (cos['SNR_36'] >= 5) & (cos['SNR_45'] >= 5) & (cos['SNR_58'] >= 5) & (cos['SNR_80'] >= 5)]\n",
-    "uds = uds[(uds['use'] == 1) & (uds['SNR_36'] >= 5) & (uds['SNR_45'] >= 5) & (uds['SNR_58'] >= 5) & (uds['SNR_80'] >= 5)]\n",
+    "cdfs = cdfs[(cdfs['use'] == 1) & (cdfs['SNR_36'] >= 5) & (cdfs['SNR_45'] >= 5) & (cdfs['SNR_58'] >= 5) & (cdfs['SNR_80'] >= 5) & (cdfs['SNR_U'] >= 5) & (cdfs['SNR_V'] >= 5) & (cdfs['SNR_J'] >= 5)]\n",
+    "cos = cos[(cos['use'] == 1) & (cos['SNR_36'] >= 5) & (cos['SNR_45'] >= 5) & (cos['SNR_58'] >= 5) & (cos['SNR_80'] >= 5) & (cos['SNR_U'] >= 5) & (cos['SNR_V'] >= 5) & (cos['SNR_J'] >= 5)]\n",
+    "uds = uds[(uds['use'] == 1) & (uds['SNR_36'] >= 5) & (uds['SNR_45'] >= 5) & (uds['SNR_58'] >= 5) & (uds['SNR_80'] >= 5) & (uds['SNR_U'] >= 5) & (uds['SNR_V'] >= 5) & (uds['SNR_J'] >= 5)]\n",
     "\n",
-    "cdfs = cdfs[(cdfs['f_36'] != -99) & (cdfs['f_45'] != -99) & (cdfs['f_58'] != -99) & (cdfs['f_80'] != -99)]\n",
-    "cos = cos[(cos['f_36'] != -99) & (cos['f_45'] != -99) & (cos['f_58'] != -99) & (cos['f_80'] != -99)]\n",
-    "uds = uds[(uds['f_36'] != -99) & (uds['f_45'] != -99) & (uds['f_58'] != -99) & (uds['f_80'] != -99)]\n",
+    "cdfs = cdfs[(cdfs['f_36'] != -99) & (cdfs['f_45'] != -99) & (cdfs['f_58'] != -99) & (cdfs['f_80'] != -99) & (cdfs['f_U'] != -99) & (cdfs['f_V'] != -99) & (cdfs['f_J'] != -99)]\n",
+    "cos = cos[(cos['f_36'] != -99) & (cos['f_45'] != -99) & (cos['f_58'] != -99) & (cos['f_80'] != -99) & (cos['f_U'] != -99) & (cos['f_V'] != -99) & (cos['f_J'] != -99)]\n",
+    "uds = uds[(uds['f_36'] != -99) & (uds['f_45'] != -99) & (uds['f_58'] != -99) & (uds['f_80'] != -99) & (uds['f_U'] != -99) & (uds['f_V'] != -99) & (uds['f_J'] != -99)]\n",
     "\n",
-    "cos = cos.dropna(subset = ['AB_36', 'AB_45', 'AB_58', 'AB_80', '80_45', '58_36'])\n",
-    "uds = uds.dropna(subset = ['AB_36', 'AB_45', 'AB_58', 'AB_80', '80_45', '58_36'])\n",
-    "cdfs = cdfs.dropna(subset = ['AB_36', 'AB_45', 'AB_58', 'AB_80', '80_45', '58_36'])"
+    "cos = cos.dropna(subset = ['AB_36', 'AB_45', 'AB_58', 'AB_80', '80_45', '58_36', 'f_U'])\n",
+    "uds = uds.dropna(subset = ['AB_36', 'AB_45', 'AB_58', 'AB_80', '80_45', '58_36', 'f_U'])\n",
+    "cdfs = cdfs.dropna(subset = ['AB_36', 'AB_45', 'AB_58', 'AB_80', '80_45', '58_36', 'f_U'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
